--- a/modified/index.html
+++ b/modified/index.html
@@ -12,8 +12,8 @@
         rel="stylesheet" />
     <!-- https://fonts.google.com/specimen/Open+Sans?selection.family=Open+Sans -->
     <link href="./css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
-    <link href="../slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
-    <link href="../slick/slick-theme.css" rel="stylesheet" />
+    <link href="./slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
+    <link href="./slick/slick-theme.css" rel="stylesheet" />
     <link href="./css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
     <link href="./css/templatemo-new-vision.css" rel="stylesheet" />
     <!--
