add video to replace main hero image

--- a/modified/index.html
+++ b/modified/index.html
@@ -79,7 +79,12 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12">
-                <div class="tm-main-bg"></div>
+                <div class="tm-main-bg">
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WzyliYj9K5c"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
@@ -95,7 +100,7 @@ https://templatemo.com/tm-542-new-vision
 
                 <div class="row tm-welcome-row">
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-01.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">Best collection</h3>
