maintain aspect ratio of video and keep it full width

--- a/modified/index.html
+++ b/modified/index.html
@@ -80,8 +80,7 @@ https://templatemo.com/tm-542-new-vision
         <div class="row">
             <div class="col-12">
                 <div class="tm-main-bg">
-                    <iframe width="1200" height="620" src="https://www.youtube-nocookie.com/embed/WzyliYj9K5c"
-                        frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/WzyliYj9K5c" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
