--- a/modified/index.html
+++ b/modified/index.html
@@ -44,10 +44,11 @@ https://templatemo.com/tm-542-new-vision
                                     class="fas fa-bars fa-1x"></i></span></button>
 
                         <!-- Collapsible content -->
-                        <div class="collapse navbar-collapse tm-nav" id="navbarSupportedContent1">
+                        <div class="collapse navbar-collapse tm-nav" id="navbarSupportedContent1"
+                            style="justify-content: center;">
 
                             <!-- Links -->
-                            <ul class="navbar-nav mr-auto">
+                            <ul class="navbar-nav">
                                 <li class="nav-item active">
                                     <a class="nav-link tm-nav-link" href="#">Home <span
                                             class="sr-only">(current)</span></a>
