--- a/modified/index.html
+++ b/modified/index.html
@@ -33,6 +33,9 @@ https://templatemo.com/tm-542-new-vision
                 <div class="col-12 tm-site-header-col">
                     <div class="tm-site-header-left">
                         <h1 class="tm-site-name">Help Tibetan Nuns, Inc.</h1>
+                        <div role="doc-subtitle" style="font-size:1.5rem; text-align: center;">Supporting Tibetan
+                            Buddhist Nuns of the
+                            Himalayan Region</div>
                     </div>
                     <!--Navbar-->
                     <nav class="navbar navbar-expand-lg">
