--- a/modified/index.html
+++ b/modified/index.html
@@ -103,27 +103,55 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
                             <div>
-                                <p><a rel="nofollow" target="_parent"
-                                        href="https://templatemo.com/tm-542-new-vision">New Vision HTML Template</a> is
-                                    provided by TemplateMo for 100% free of charge. Vestibulum consectetur urna augue,
-                                    in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer
-                                    tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                                <p> <strong>Help Tibetan Nuns, Inc.</strong> is a non-profit created by U.S. supporters
+                                    of Thrangu Kong Jo
+                                    Sherab Ling Nunnery, an affiliate of Thrangu Monastery in Kham, Eastern Tibet. This
+                                    thriving Buddhist community houses over 100 nuns in Yushu, Qinghai, near the town of
+                                    Jiegu. This area was hit by a major earthquake in 2010, killing about 2,700 people.
+                                </p>
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
                             <div>
-                                <p>Curabitur et viverra purus, in ornare sem. Donec eu imperdiet felis, sed interdum
-                                    leo. Mauris nisl mi, bibendum eu venenatis at, condimentum et dui. Proin mi enim,
-                                    dapibus at metus semper, hendrerit faucibus nisi.</p>
+                                <p>Resting on the Tibetan Plateau 12,000 feet above sea level, the nunnery consists of a
+                                    temple, a three-year-retreat building, a library and dining building, a large guest
+                                    house, and living facilities for the nuns. The nunnery is in a very remote area. The
+                                    nuns are poor and currently have no source of income other than what they are able
+                                    to obtain by begging and what their families provide.</p>
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fas fa-5x fa-fire-alt tm-about-icon"></i>
                             <div>
-                                <p>Duis accumsan dolor feugiat dapibus ultrices. Vestibulum consectetur urna augue, in
-                                    sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer tempor
-                                    nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                                <p>Under the direction of Lodroe Nyima Rinpoche, they are currently looking at ways to
+                                    become self-sustaining while simultaneously supplying some of the crucial needs of
+                                    the local community. One way they have started supporting themselves is by operating
+                                    a spring-fed swimming pool, which is located right next to the monastery. There is
+                                    also a plan to build a medical center and train the nuns to provide care for the
+                                    local community.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
+                            <div>
+                                <p> Since its founding in 2011, Help Tibetan Nuns, Inc. has already raised $150,000 to
+                                    support Thrangu Kong Jo Sherab Ling Nunnery, and there is still so much more to be
+                                    done.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
+                            <div>
+                                <p>Help Tibetan Nuns, Inc. has extended its activity to support additional nunneries in
+                                    India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
+                                    giving when a generous donation enabled us to help over 500 nuns including children,
+                                    young women, middle-aged nuns, and elders. These women found a spiritual home in the
+                                    nunneries we help support. Some of the funds went to healthcare, some to education,
+                                    and some to the construction of housing facilities. In Bhutan we made a generous
+                                    donation towards the building of a new shedra (university). In the future we plan to
+                                    continue our outreach to include more nunneries in the Himalayan Region.</p>
                             </div>
                         </div>
                     </div>
