remove header block section that was blocking video controls

--- a/modified/index.html
+++ b/modified/index.html
@@ -92,11 +92,11 @@ https://templatemo.com/tm-542-new-vision
         <main>
             <!-- Welcome section -->
             <section class="tm-welcome">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-12">
                         <h2 class="tm-section-header tm-header-floating">Welcome to New Vision</h2>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
