--- a/modified/index.html
+++ b/modified/index.html
@@ -98,8 +98,32 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div> -->
 
+                <div class="row tm-welcome-row-2">
+
+                    <div class="col-md-6">
+                        <div class="tm-about-1">
+                            <img src="img/img-3x1-01.jpg" alt="Image" class="img-fluid mb-5">
+                            <p class="tm-article-text">Phasellus blandit tortor vel odio hendrerit, eleifend ultricies
+                                odio temport. Etiam euismod, lectus convallis efficitur convallis, risus orci auctor
+                                orci.</p>
+                            <p>Cras imperdiet in ligula sit amet fringilla. Morbi posuere mattis ornare. Nunc iaculis
+                                porta ipsum. Aliquam vehicula egestas diam auctor ornare.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="tm-about-1">
+                            <img src="img/img-3x1-02.jpg" alt="Image" class="img-fluid mb-5">
+                            <p class="tm-article-text">Quisque sed tortor sed metus vehicula pulvinar vel dictum tortor.
+                                Nivamus eu posuere arcu. Vivamus vel urna id mi congue convallis at sed augue.</p>
+                            <p>Praesent venenatis risus aliquet semper porta. Maecenas mollis nisi non hendrerit
+                                finibus. Ut eu convallis massa. Sed imperdiet arcu non egestas elementum.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
+
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
                             <div>
