--- a/modified/index.html
+++ b/modified/index.html
@@ -98,29 +98,6 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div> -->
 
-                <div class="row tm-welcome-row-2">
-
-                    <div class="col-md-6">
-                        <div class="tm-about-1">
-                            <img src="img/img-3x1-01.jpg" alt="Image" class="img-fluid mb-5">
-                            <p class="tm-article-text">Phasellus blandit tortor vel odio hendrerit, eleifend ultricies
-                                odio temport. Etiam euismod, lectus convallis efficitur convallis, risus orci auctor
-                                orci.</p>
-                            <p>Cras imperdiet in ligula sit amet fringilla. Morbi posuere mattis ornare. Nunc iaculis
-                                porta ipsum. Aliquam vehicula egestas diam auctor ornare.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="tm-about-1">
-                            <img src="img/img-3x1-02.jpg" alt="Image" class="img-fluid mb-5">
-                            <p class="tm-article-text">Quisque sed tortor sed metus vehicula pulvinar vel dictum tortor.
-                                Nivamus eu posuere arcu. Vivamus vel urna id mi congue convallis at sed augue.</p>
-                            <p>Praesent venenatis risus aliquet semper porta. Maecenas mollis nisi non hendrerit
-                                finibus. Ut eu convallis massa. Sed imperdiet arcu non egestas elementum.</p>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
 
@@ -165,21 +142,36 @@ https://templatemo.com/tm-542-new-vision
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 tm-media tm-media-v-center">
-                            <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
-                            <div>
-                                <p>Help Tibetan Nuns, Inc. has extended its activity to support additional nunneries in
-                                    India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
-                                    giving when a generous donation enabled us to help over 500 nuns including children,
-                                    young women, middle-aged nuns, and elders. These women found a spiritual home in the
-                                    nunneries we help support. Some of the funds went to healthcare, some to education,
-                                    and some to the construction of housing facilities. In Bhutan we made a generous
-                                    donation towards the building of a new shedra (university). In the future we plan to
-                                    continue our outreach to include more nunneries in the Himalayan Region.</p>
-                            </div>
+                    </div>
+                </div>
+
+                <div class="row tm-welcome-row-2">
+
+                    <div class="col-md-6">
+                        <div class="tm-about-1">
+                            <img src="img/img-3x1-01.jpg" alt="Image" class="img-fluid mb-5">
+                            <p class="tm-article-text">
+                                Help Tibetan Nuns, Inc. has extended its activity to support additional nunneries in
+                                India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
+                                giving when a generous donation enabled us to help over 500 nuns including children,
+                                young women, middle-aged nuns, and elders. These women found a spiritual home in the
+                                nunneries we help support.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="tm-about-1">
+                            <img src="img/img-3x1-02.jpg" alt="Image" class="img-fluid mb-5">
+                            <p class="tm-article-text">
+                                Some of the funds went to healthcare, some to education,
+                                and some to the construction of housing facilities. In Bhutan we made a generous
+                                donation towards the building of a new shedra (university). In the future we plan to
+                                continue our outreach to include more nunneries in the Himalayan Region.
+                            </p>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- 
                 <div class="row tm-welcome-row">
