add images to media folder and use two in two-column layout

--- a/modified/index.html
+++ b/modified/index.html
@@ -149,7 +149,7 @@ https://templatemo.com/tm-542-new-vision
 
                     <div class="col-md-6">
                         <div class="tm-about-1">
-                            <img src="img/img-3x1-01.jpg" alt="Image" class="img-fluid mb-5">
+                            <img src="media/many-nuns-on-steps.jpeg" alt="Image" class="img-fluid mb-5">
                             <p class="tm-article-text">
                                 Help Tibetan Nuns, Inc. has extended its activity to support additional nunneries in
                                 India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
@@ -161,7 +161,7 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                     <div class="col-md-6">
                         <div class="tm-about-1">
-                            <img src="img/img-3x1-02.jpg" alt="Image" class="img-fluid mb-5">
+                            <img src="media/MonestaryRoof.jpeg" alt="Image" class="img-fluid mb-5">
                             <p class="tm-article-text">
                                 Some of the funds went to healthcare, some to education,
                                 and some to the construction of housing facilities. In Bhutan we made a generous
