temporarily remove other icons and widen the paragraph section

--- a/modified/index.html
+++ b/modified/index.html
@@ -112,7 +112,7 @@ https://templatemo.com/tm-542-new-vision
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
-                            <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
+                            <!-- <i class="fas fa-5x fa-air-freshener tm-about-icon"></i> -->
                             <div>
                                 <p>Resting on the Tibetan Plateau 12,000 feet above sea level, the nunnery consists of a
                                     temple, a three-year-retreat building, a library and dining building, a large guest
@@ -122,7 +122,7 @@ https://templatemo.com/tm-542-new-vision
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
-                            <i class="fas fa-5x fa-fire-alt tm-about-icon"></i>
+                            <!-- <i class="fas fa-5x fa-fire-alt tm-about-icon"></i> -->
                             <div>
                                 <p>Under the direction of Lodroe Nyima Rinpoche, they are currently looking at ways to
                                     become self-sustaining while simultaneously supplying some of the crucial needs of
@@ -133,7 +133,7 @@ https://templatemo.com/tm-542-new-vision
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
-                            <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
+                            <!-- <i class="fab fa-5x fa-accusoft tm-about-icon"></i> -->
                             <div>
                                 <p> Since its founding in 2011, Help Tibetan Nuns, Inc. has already raised $150,000 to
                                     support Thrangu Kong Jo Sherab Ling Nunnery, and there is still so much more to be
