--- a/modified/index.html
+++ b/modified/index.html
@@ -58,13 +58,16 @@ https://templatemo.com/tm-542-new-vision
                                             class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="company.html">Our Company</a>
+                                    <a class="nav-link tm-nav-link" href="about-us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
+                                    <a class="nav-link tm-nav-link" href="nunneries.html">Nunneries</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link tm-nav-link" href="how-to-help.html">How To Help</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link tm-nav-link" href="blog.html">Blog</a>
                                 </li>
                             </ul>
                             <!-- Links -->
