add contact section (default text has not been replaced)

--- a/modified/index.html
+++ b/modified/index.html
@@ -174,47 +174,10 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div>
 
-
-                <!-- 
-                <div class="row tm-welcome-row">
-                    <article class="col-lg-6 tm-media">
-                        <img src="media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
-                            <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">Best collection</h3>
-                            </a>
-                            <p>Aliquam purus arcu, congue a gravida ac, facilisis vel erat. Maecenas pretium sem.</p>
-                        </div>
-                    </article>
-                    <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-02.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
-                            <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">New Design for your website</h3>
-                            </a>
-                            <p>Aliquam purus arcu, congue a gravida ac, facilisis vel erat. Maecenas pretium sem at nisl
-                                malesuada, quis.</p>
-                        </div>
-                    </article>
-                    <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-03.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
-                            <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">Most unique idea ever made</h3>
-                            </a>
-                            <p>Aliquam purus arcu, congue a gravida ac, facilisis vel erat. Maecenas. <span
-                                    class="tm-hover-color">Hover #09F</span></p>
-                        </div>
-                    </article>
-                    <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-04.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
-                            <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">Simple touch</h3>
-                            </a>
-                            <p>Please tell your friends about TemplateMo website. Thank you. Title / Text #666</p>
-                        </div>
-                    </article>
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="tm-section-header tm-section-header-small">Contact</h2>
+                    </div>
                 </div>
 
                 <div class="row tm-welcome-row-2">
@@ -247,7 +210,6 @@ https://templatemo.com/tm-542-new-vision
                         </article>
                     </div>
                 </div>
-                 -->
             </section>
 
             <!-- Featured -->
