remove carousel temporarily

--- a/modified/index.html
+++ b/modified/index.html
@@ -213,15 +213,15 @@ https://templatemo.com/tm-542-new-vision
             </section>
 
             <!-- Featured -->
-            <section class="tm-featured">
+            <!-- <section class="tm-featured">
                 <div class="row">
                     <div class="col-12">
                         <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Carousel -->
-                <div class="grid tm-carousel">
+            <!-- Carousel -->
+            <!-- <div class="grid tm-carousel">
                     <figure class="effect-honey">
                         <img src="img/gallery-item-01.jpg" alt="Featured Item">
                         <figcaption>
@@ -270,8 +270,7 @@ https://templatemo.com/tm-542-new-vision
                             <h4><i><span>Best</span> CSS Template</i></h4>
                         </figcaption>
                     </figure>
-                </div>
-            </section>
+                </div> -->
 
             <footer>
                 Copyright &copy; 2020 New Vision
