--- a/modified/index.html
+++ b/modified/index.html
@@ -184,10 +184,12 @@ https://templatemo.com/tm-542-new-vision
                     <div class="col-lg-4 tm-dotted-box-container">
                         <article class="tm-dotted-box">
                             <i class="fas fa-3x fa-binoculars tm-article-icon"></i>
-                            <h3 class="tm-article-title">Template Usage</h3>
-                            <p class="tm-article-text">You can feel free to edit and use New Vision template for your
-                                commercial websites. Title color is #333</p>
-                            <a class="tm-btn tm-btn-rounded tm-article-link" href="#">More Details</a>
+                            <h3 class="tm-article-title">Email</h3>
+                            <p class="tm-article-text">Feel free to send us an email at:
+                                <strong>amymck.mcc (at) gmail.com</strong></p>
+                            <a class="tm-btn tm-btn-rounded tm-article-link"
+                                href="mailto:amymck.mcc@gmail.com?subject=Mail from Help Tibetan Nuns site">Or click
+                                here</a>
                         </article>
                     </div>
                     <div class="col-lg-4 tm-dotted-box-container">
