add mail and phone number sections to contact info

--- a/modified/index.html
+++ b/modified/index.html
@@ -195,20 +195,22 @@ https://templatemo.com/tm-542-new-vision
                     <div class="col-lg-4 tm-dotted-box-container">
                         <article class="tm-dotted-box">
                             <i class="fas fa-3x fa-microscope tm-article-icon"></i>
-                            <h3 class="tm-article-title">New Vision</h3>
-                            <p class="tm-article-text"><a rel="nofollow" target="_parent"
-                                    href="https://templatemo.com/tm-542-new-vision">New Vision</a> comes with 4
-                                different HTML pages and provided free of charge by TemplateMo. You can add more pages
-                                if you need. Text color is #666</p>
+                            <h3 class="tm-article-title">Mailing Address</h3>
+                            <p class="tm-article-text">
+                                HelpTibetanNuns.org<br>
+                                c/o Amy McCracken<br>
+                                P.O Box 1600<br>
+                                Cotuit, MA 02635<br>
+                            </p>
                         </article>
                     </div>
                     <div class="col-lg-4 tm-dotted-box-container">
                         <article class="tm-dotted-box">
                             <i class="fas fa-3x fa-glasses tm-article-icon"></i>
-                            <h3 class="tm-article-title">Download Sites</h3>
-                            <p class="tm-article-text">Do not re-distribute our template ZIP file on your website. Or
-                                contact us first. Button color is #C99</p>
-                            <a class="tm-btn tm-article-link" href="#">Read More...</a>
+                            <h3 class="tm-article-title">Phone Number</h3>
+                            <p class="tm-article-text">
+                                If you need to get in touch right away, you can try calling us at: (+1) 508-419-6820
+                            </p>
                         </article>
                     </div>
                 </div>
