--- a/modified/index.html
+++ b/modified/index.html
@@ -183,7 +183,7 @@ https://templatemo.com/tm-542-new-vision
                 <div class="row tm-welcome-row-2">
                     <div class="col-lg-4 tm-dotted-box-container">
                         <article class="tm-dotted-box">
-                            <i class="fas fa-3x fa-binoculars tm-article-icon"></i>
+                            <i class="fas fa-3x fa-envelope tm-article-icon"></i>
                             <h3 class="tm-article-title">Email</h3>
                             <p class="tm-article-text">Feel free to send us an email at:
                                 <strong>amymck.mcc (at) gmail.com</strong></p>
@@ -194,7 +194,7 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                     <div class="col-lg-4 tm-dotted-box-container">
                         <article class="tm-dotted-box">
-                            <i class="fas fa-3x fa-microscope tm-article-icon"></i>
+                            <i class="fas fa-3x fa-home tm-article-icon"></i>
                             <h3 class="tm-article-title">Mailing Address</h3>
                             <p class="tm-article-text">
                                 HelpTibetanNuns.org<br>
@@ -206,7 +206,7 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                     <div class="col-lg-4 tm-dotted-box-container">
                         <article class="tm-dotted-box">
-                            <i class="fas fa-3x fa-glasses tm-article-icon"></i>
+                            <i class="fas fa-3x fa-phone tm-article-icon"></i>
                             <h3 class="tm-article-title">Phone Number</h3>
                             <p class="tm-article-text">
                                 If you need to get in touch right away, you can try calling us at: (+1) 508-419-6820
