--- a/modified/index.html
+++ b/modified/index.html
@@ -40,8 +40,7 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                     <!--Navbar-->
                     <nav class="navbar navbar-expand-lg">
-
-                        <!-- Collapse button -->
+                        <!-- Collapse button  -->
                         <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                             aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
@@ -70,13 +69,36 @@ https://templatemo.com/tm-542-new-vision
                                     <a class="nav-link tm-nav-link" href="blog.html">Blog</a>
                                 </li>
                             </ul>
-                            <!-- Links -->
 
                         </div>
-                        <!-- Collapsible content -->
 
                     </nav>
                     <!--/.Navbar-->
+
+                    <nav>
+                        <ul class="nav nav-tabs">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Active</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Separated link</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
