copy classes from old nav to new dropdown nav, and font size increased

--- a/modified/index.html
+++ b/modified/index.html
@@ -75,7 +75,7 @@ https://templatemo.com/tm-542-new-vision
                     </nav>
                     <!--/.Navbar-->
 
-                    <nav>
+                    <nav class="navbar navbar-expand-lg">
                         <ul class="nav nav-tabs">
                             <li class="nav-item">
                                 <a class="nav-link active" href="#">Active</a>
