apply classes to links from previous nav bar

--- a/modified/index.html
+++ b/modified/index.html
@@ -87,11 +87,11 @@ https://templatemo.com/tm-542-new-vision
 
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Active</a>
+                                    <a class="nav-link active tm-nav-link" href="#">Active</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                                        aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                                    <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
+                                        role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" href="#">Action</a>
                                         <a class="dropdown-item" href="#">Another action</a>
@@ -101,11 +101,10 @@ https://templatemo.com/tm-542-new-vision
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link tm-nav-link" href="#">Link</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link disabled" href="#" tabindex="-1"
-                                        aria-disabled="true">Disabled</a>
+                                    <a class="nav-link tm-nav-link" href="#">Not Disabled</a>
                                 </li>
                             </ul>
 
