add the right links to new nav bar

--- a/modified/index.html
+++ b/modified/index.html
@@ -87,24 +87,62 @@ https://templatemo.com/tm-542-new-vision
 
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active tm-nav-link" href="#">Active</a>
+                                    <a class="nav-link active tm-nav-link" href="#">Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
-                                        role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                                        role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Separated link</a>
+                                        <a class="dropdown-item" href="./our-story">Our Story</a>
+                                        <a class="dropdown-item" href="./board">Our Board</a>
                                     </div>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="#">Link</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
+                                        href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                        Nunneries
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./nunneries/thrangu">
+                                            Thrangu Kong Jo Sherab Ling
+                                        </a>
+                                        <a class="dropdown-item" href="./nunneries/tilokpur">
+                                            Tilokpur
+                                        </a>
+                                        <a class="dropdown-item" href="./nunneries/palchen-chosling-lachi">
+                                            Palchen Chosling Lachi
+                                        </a>
+                                    </div>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="#">Not Disabled</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
+                                        href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                        How To Help
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./help/sponsor">
+                                            Sponsoring Nuns
+                                        </a>
+                                        <a class="dropdown-item" href="./help/call-to-action">
+                                            Call to Action
+                                        </a>
+
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
+                                        href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                        Blog
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./blog">
+                                            Blog
+                                        </a>
+                                        <a class="dropdown-item" href="./gallery">
+                                            Gallery
+                                        </a>
+
+                                    </div>
                                 </li>
                             </ul>
 
