--- a/modified/index.html
+++ b/modified/index.html
@@ -39,52 +39,20 @@ https://templatemo.com/tm-542-new-vision
                             Himalayan Region</div>
                     </div>
                     <!--Navbar-->
+
                     <nav class="navbar navbar-expand-lg">
-                        <!-- Collapse button  -->
+
+                        <!-- Collapse Button -->
                         <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                             aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
                                     class="fas fa-bars fa-1x"></i></span></button>
 
-                        <!-- Collapsible content -->
+                        <!-- Collapsible Content -->
                         <div class="collapse navbar-collapse tm-nav" id="navbarSupportedContent1"
                             style="justify-content: center;">
 
                             <!-- Links -->
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">Home <span
-                                            class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="about-us.html">About Us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="nunneries.html">Nunneries</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="how-to-help.html">How To Help</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="blog.html">Blog</a>
-                                </li>
-                            </ul>
-
-                        </div>
-
-                    </nav>
-                    <!--/.Navbar-->
-
-                    <nav class="navbar navbar-expand-lg">
-
-                        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
-                            aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
-                                    class="fas fa-bars fa-1x"></i></span></button>
-
-                        <div class="collapse navbar-collapse tm-nav" id="navbarSupportedContent1"
-                            style="justify-content: center;">
-
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
                                     <a class="nav-link active tm-nav-link" href="#">Home</a>
