--- a/modified/index.html
+++ b/modified/index.html
@@ -61,8 +61,8 @@ https://templatemo.com/tm-542-new-vision
                                     <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
                                         role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./our-story">Our Story</a>
-                                        <a class="dropdown-item" href="./board">Our Board</a>
+                                        <a class="dropdown-item" href="./our-story.html">Our Story</a>
+                                        <a class="dropdown-item" href="./board.html">Our Board</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -71,13 +71,13 @@ https://templatemo.com/tm-542-new-vision
                                         Nunneries
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./nunneries/thrangu">
+                                        <a class="dropdown-item" href="./nunneries/thrangu.html">
                                             Thrangu Kong Jo Sherab Ling
                                         </a>
-                                        <a class="dropdown-item" href="./nunneries/tilokpur">
+                                        <a class="dropdown-item" href="./nunneries/tilokpur.html">
                                             Tilokpur
                                         </a>
-                                        <a class="dropdown-item" href="./nunneries/palchen-chosling-lachi">
+                                        <a class="dropdown-item" href="./nunneries/palchen-chosling-lachi.html">
                                             Palchen Chosling Lachi
                                         </a>
                                     </div>
@@ -88,10 +88,10 @@ https://templatemo.com/tm-542-new-vision
                                         How To Help
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./help/sponsor">
+                                        <a class="dropdown-item" href="./help/sponsor.html">
                                             Sponsoring Nuns
                                         </a>
-                                        <a class="dropdown-item" href="./help/call-to-action">
+                                        <a class="dropdown-item" href="./help/call-to-action.html">
                                             Call to Action
                                         </a>
 
@@ -103,10 +103,10 @@ https://templatemo.com/tm-542-new-vision
                                         Blog
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./blog">
+                                        <a class="dropdown-item" href="./blog.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="./gallery">
+                                        <a class="dropdown-item" href="./gallery.html">
                                             Gallery
                                         </a>
 
