--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -132,7 +132,7 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Welcome to New Vision</h2>
+                        <h2 class="tm-section-header tm-header-floating">Our Story</h2>
                     </div>
                 </div>
 
