--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -140,39 +140,73 @@ https://templatemo.com/tm-542-new-vision
                     <article class="col-lg-6 tm-media">
                         <img src="img/img-3x2-01.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
-                            <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">Best collection</h3>
-                            </a>
-                            <p>Aliquam purus arcu, congue a gravida ac, facilisis vel erat. Maecenas pretium sem.</p>
+                            <h3 class="tm-article-title text-uppercase">
+                                2011
+                            </h3>
+                            <p>
+                                Help Tibetan Nuns was founded and began to raise funds for a medical center in Tibet.
+                            </p>
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="img/img-3x2-02.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">New Design for your website</h3>
+                                <h3 class="tm-article-title text-uppercase">2015</h3>
                             </a>
-                            <p>Aliquam purus arcu, congue a gravida ac, facilisis vel erat. Maecenas pretium sem at nisl
-                                malesuada, quis.</p>
+                            <p>
+                                We donated $150,000 for the expansion and construction of naturally occurring spring-fed
+                                healing pools at Thrangu Nunnery in Tibet. Very popular with the locals, the
+                                Olympic-sized pool is a source of income for the nunnery.
+                            </p>
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="img/img-3x2-03.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">Most unique idea ever made</h3>
+                                <h3 class="tm-article-title text-uppercase">2017</h3>
                             </a>
-                            <p>Aliquam purus arcu, congue a gravida ac, facilisis vel erat. Maecenas. <span
-                                    class="tm-hover-color">Hover #09F</span></p>
+                            <p>
+                                We gifted $50,000 to five Himalayan nunneries for education, medicine, and construction.
+                            </p>
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="img/img-3x2-04.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
-                                <h3 class="tm-article-title text-uppercase">Simple touch</h3>
+                                <h3 class="tm-article-title text-uppercase">2018</h3>
                             </a>
-                            <p>Please tell your friends about TemplateMo website. Thank you. Title / Text #666</p>
+                            <p>
+                                A large gift was made to a nunnery in Sikkim for construction of housing, classrooms,
+                                and a shrine.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="col-lg-6 tm-media">
+                        <img src="img/img-3x2-03.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <div class="tm-media-body">
+                            <a href="#" class="tm-article-link">
+                                <h3 class="tm-article-title text-uppercase">2018</h3>
+                            </a>
+                            <p>
+                                At Thrangu Nunnery in Tibet, a nun who had been diagnosed with advanced tuberculosis, a
+                                life threatening disease, was brought to a hospital in Beijing and has since made vast
+                                improvements towards regaining her health.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="col-lg-6 tm-media">
+                        <img src="img/img-3x2-04.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <div class="tm-media-body">
+                            <a href="#" class="tm-article-link">
+                                <h3 class="tm-article-title text-uppercase">2019</h3>
+                            </a>
+                            <p>
+                                We raised funds for the first Karma Kagyu nunnery built in India at Tilokpur in Himachal
+                                Pradesh, which will be used for education and food.
+                            </p>
                         </div>
                     </article>
                 </div>
