add text for current goals

--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -215,7 +215,7 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">About Our Company</h2>
+                        <h2 class="tm-section-header tm-header-floating">Current Goals</h2>
                     </div>
                 </div>
 
@@ -224,27 +224,35 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
                             <div>
-                                <p><a rel="nofollow" target="_parent"
-                                        href="https://templatemo.com/tm-542-new-vision">New Vision HTML Template</a>
-                                    is provided by TemplateMo for 100% free of charge. Vestibulum consectetur urna
-                                    augue, in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo.
-                                    Integer tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                                <p>
+                                    We are looking to raise $300,000 to build a small medical clinic at Thrangu Nunnery
+                                    in Tibet, and to offer medical supplies to several Himalayan nunneries in order to
+                                    treat TB and other diseases endemic to these areas
+                                </p>
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
                             <div>
-                                <p>Curabitur et viverra purus, in ornare sem. Donec eu imperdiet felis, sed interdum
-                                    leo. Mauris nisl mi, bibendum eu venenatis at, condimentum et dui. Proin mi
-                                    enim, dapibus at metus semper, hendrerit faucibus nisi.</p>
+                                <p>
+                                    We are looking to raise $70,000 for a suitable bus to transport the nuns on the
+                                    mountainous roads in Yushu. They almost had a deadly accident this year in their old
+                                    rickety bus with its small tires.
+                                </p>
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
                             <i class="fas fa-5x fa-fire-alt tm-about-icon"></i>
                             <div>
-                                <p>Duis accumsan dolor feugiat dapibus ultrices. Vestibulum consectetur urna augue,
-                                    in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer
-                                    tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                                <p>
+                                    Help Tibetan Nuns, Inc. is a non-profit organization created by U.S. supporters of
+                                    Thrangu Kong Jo Sherab Ling Nunnery, an affiliate of Thrangu Monastery in Kham,
+                                    Eastern Tibet. All monetary gifts are fully tax-deductible under the law. Donations
+                                    may be made to Help Tibetan Nuns, Inc., Fed Tax I.D. 81-4412684, and mailed to: Help
+                                    Tibetan Nuns, Inc., P.O. Box 1600, Cotuit MA 02635. Or to donate online, please use
+                                    the
+                                    donate button at the top of the page.
+                                </p>
                             </div>
                         </div>
                     </div>
