--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -138,7 +138,7 @@ https://templatemo.com/tm-542-new-vision
 
                 <div class="row tm-welcome-row">
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-01.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/MedicalCenter.png" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <h3 class="tm-article-title text-uppercase">
                                 2011
