--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -149,7 +149,7 @@ https://templatemo.com/tm-542-new-vision
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-02.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/pool.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2015</h3>
