adjust spacing between elements on our story page

--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -121,7 +121,7 @@ https://templatemo.com/tm-542-new-vision
         </div>
 
         <!-- Main -->
-        <main>
+        <main style="margin-top: 52px;">
             <!-- Welcome section -->
             <section class="tm-welcome">
                 <div class="row">
@@ -130,7 +130,7 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div>
 
-                <div class="row tm-welcome-row">
+                <div class="row tm-welcome-row" style="margin-top:60px;">
                     <article class="col-lg-6 tm-media">
                         <img src="media/MedicalCenter.png" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
@@ -209,11 +209,11 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Current Goals</h2>
+                        <h2 class="tm-section-header">Current Goals</h2>
                     </div>
                 </div>
 
-                <div class="row tm-welcome-row">
+                <div class="row tm-welcome-row" style="margin-top: 60px;">
                     <div class="tm-about">
                         <div class="col-12 tm-media tm-media-v-center">
                             <div>
