allow for text to wrap around images in our story page

--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -133,7 +133,9 @@ https://templatemo.com/tm-542-new-vision
                 <div class="row tm-welcome-row" style="margin-top:60px;">
                     <article class="col-lg-6 tm-media">
                         <img src="media/MedicalCenter.png" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
+
+                        <!--  class="tm-media-body" -->
+                        <div>
                             <h3 class="tm-article-title text-uppercase">
                                 2011
                             </h3>
@@ -144,7 +146,9 @@ https://templatemo.com/tm-542-new-vision
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="media/pool.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
+
+                        <!--  class="tm-media-body" -->
+                        <div>
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2015</h3>
                             </a>
@@ -157,7 +161,9 @@ https://templatemo.com/tm-542-new-vision
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="media/nuns-with-books.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
+
+                        <!-- class="tm-media-body" -->
+                        <div>
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2017</h3>
                             </a>
@@ -168,7 +174,9 @@ https://templatemo.com/tm-542-new-vision
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="media/Ralang-Sikkim-Nuns.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
+
+                        <!-- class="tm-media-body" -->
+                        <div>
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2018</h3>
                             </a>
@@ -180,7 +188,9 @@ https://templatemo.com/tm-542-new-vision
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
+
+                        <!-- class="tm-media-body" -->
+                        <div>
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2018</h3>
                             </a>
@@ -193,7 +203,9 @@ https://templatemo.com/tm-542-new-vision
                     </article>
                     <article class="col-lg-6 tm-media">
                         <img src="media/nuns-on-steps.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
-                        <div class="tm-media-body">
+
+                        <!-- class="tm-media-body" -->
+                        <div>
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2019</h3>
                             </a>
