use figure element instead of previous hero containers and add styles for figure

--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -120,15 +120,16 @@ https://templatemo.com/tm-542-new-vision
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12">
-                <div class="tm-main-bg">
-                    <img src="./media/board.jpg" alt="picture of our board members"> </div>
-            </div>
-        </div>
-
-
+        <figure>
+            <img src="./media/board.jpg" alt="picture of our board members">
+            <figcaption>
+                HTN board members from left to right: Amy Schwarz, Lama Karma Drodhul, Amy McCracken, and Palma
+                Puzzuoli.
+            </figcaption>
+        </figure>
     </div>
+
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
