--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -120,6 +120,12 @@ https://templatemo.com/tm-542-new-vision
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-12">
+                <h2 class="tm-section-header tm-section-header-small">Our Board</h2>
+            </div>
+        </div>
+
         <figure>
             <img src="./media/board.jpg" alt="picture of our board members">
             <figcaption>
