--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -122,7 +122,7 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12">
-                <h2 class="tm-section-header tm-section-header-small">Our Board</h2>
+                <h2 class="tm-section-header ">Our Board</h2>
             </div>
         </div>
 
