--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -121,8 +121,8 @@ https://templatemo.com/tm-542-new-vision
         </div>
 
         <div class="row">
-            <div class="col-12">
-                <h2 class="tm-section-header ">Our Board</h2>
+            <div class="col-12" style="margin:20px 0 50px;">
+                <h2 class="tm-section-header">Our Board</h2>
             </div>
         </div>
 
