adjust title to line up with photo

--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -121,7 +121,7 @@ https://templatemo.com/tm-542-new-vision
         </div>
 
         <div class="row">
-            <div class="col-12" style="margin:20px 0 50px;">
+            <div class="col-12" style="margin:20px 0 50px 50px;">
                 <h2 class="tm-section-header">Our Board</h2>
             </div>
         </div>
