use class for hero figure image so its styles are not applied to other figures

--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -126,7 +126,7 @@ https://templatemo.com/tm-542-new-vision
             </div>
         </div>
 
-        <figure>
+        <figure class="hero">
             <img src="./media/board.jpg" alt="picture of our board members">
             <figcaption>
                 HTN board members from left to right: Amy Schwarz, Lama Karma Drodhul, Amy McCracken, and Palma
