--- a/modified/our-board.html
+++ b/modified/our-board.html
@@ -100,7 +100,7 @@ https://templatemo.com/tm-542-new-vision
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
                                         href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                        Blog
+                                        Misc
                                     </a>
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" href="./blog.html">
@@ -108,6 +108,9 @@ https://templatemo.com/tm-542-new-vision
                                         </a>
                                         <a class="dropdown-item" href="./gallery.html">
                                             Gallery
+                                        </a>
+                                        <a class="dropdown-item" href="./events.html">
+                                            Events
                                         </a>
 
                                     </div>
